# structiagram

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: cli.rs  errors.rs  graph.rs  main.rs  parse.rs  render.rs
src/fixtures/document/: mod.rs
src/fixtures/user/: mod.rs
src/render/: formatter.rs
tests/: integration.rs
tests/fixtures/case1/a/: mod.rs
tests/fixtures/case1/b/: mod.rs
tests/snapshots/: integration__case1.snap
