[package]
name = "structiagram"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.0.7" }
clap = { version = "3.1.6", features = ["derive", "wrap_help"] }
# TODO: remove extra-traits feature
quote = { version = "1.0.18" }
syn = { version = "1.0.91", features = ["parsing", "full", "extra-traits"] }
tracing = { version = "0.1.34" }
walkdir = { version = "2.3.2" }
