[package]
name = "structiagram"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structiagram is a tool to generate Rust struct relation diagram as mermaid.js format."
repository = "https://github.com/ymgyt/structiagram"
readme = "README.md"
keywords = ["diagram"]
categories = ["command-line-utilities"]

[dependencies]
camino = { version = "1.0.7" }
clap = { version = "3.1.6", features = ["derive", "wrap_help"] }
quote = { version = "1.0.18" }
syn = { version = "1.0.91", features = ["parsing", "full"] }
tracing = { version = "0.1.34" }
walkdir = { version = "2.3.2" }

[dev-dependencies]
assert_cmd = { version = "2.0.4" }
insta = { version = "1.14.0" }
syn = { version = "1.0.91", features = ["parsing", "full", "extra-traits"] }

